Fixed text alignment in mobile

--- a/components/Hero/Hero.module.scss
+++ b/components/Hero/Hero.module.scss
@@ -25,6 +25,7 @@
   @media only screen and (max-width: 767px) {
     justify-items: center;
     font-size: 40px;
+    text-align: center;
   }
 }
 
